# grimorium

./: .git-blame-ignore-revs  .gitignore  .oxfmtrc.json  .oxlint.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: deploy.yml  release.yml
.zed/: settings.json
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/atoms/: BackButton.tsx  LanguagePicker.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  icon.tsx  index.ts
src/components/context/: PlayerFacingContext.tsx
src/components/inputs/: PlayerPickerList.tsx  PlayerSelector.tsx  RolePickerGrid.tsx  SelectablePlayerItem.tsx  SelectableRoleItem.tsx  index.ts
src/components/items/: AlertBox.tsx  DefaultRoleReveal.tsx  DeflectRedirectUI.tsx  EditEffectsModal.tsx  EvilTeamReveal.tsx  Grimoire.tsx  GrimoireModal.tsx  InfoBox.tsx  MalfunctionConfigStep.tsx  MysticDivider.tsx  OracleCard.tsx  PerceptionConfigStep.tsx  PlayerBadge.tsx  PlayerDetailModal.tsx  PlayerNameCard.tsx  PlayerRoleIcon.tsx  RichMessage.tsx  RoleBadge.tsx  (+5 more)
src/hooks/: useBackButton.ts  useRouter.ts  useShaderBackground.ts
src/lib/: analytics.ts  game.ts  roleAssignment.ts  router.ts  storage.ts  types.ts  updater.ts  wizardState.ts
src/routes/: __root.test.tsx  __root.tsx  cleanup.test.tsx  game.test.tsx  how-to-play.tsx  index.test.tsx  index.tsx  new-game.test.tsx  not-found.test.tsx  roles.test.tsx
src/test/: setup.ts
(+264 files in other folders)
